--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "Book-Finder": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "Book-Finder"
+    }
+  },
+  "defaultProject": "Book-Finder",
+  "cli": {
+    "analytics": "df9b831c-76e6-4269-b2c8-b99432c1b9d2"
+  }
 }
