--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "Book-Finder": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "Book-Finder"
+    }
+  },
+  "defaultProject": "Book-Finder",
+  "cli": {
+    "analytics": "e868a915-d466-45ad-86ac-c0c483128f67"
+  }
 }
